My name is Rimjhim

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <!-- Team -->
 <div id="team" class="section bg-white rounded-xl p-6 shadow-md max-w-6xl mx-auto mt-12" style="display:none;">
   <h3 class="text-2xl font-bold text-green-600">Team & Acknowledgments</h3>
-  <p class="mt-2 text-slate-700">Your names, roles, and acknowledgments here.</p>
+  <p class="mt-2 text-slate-700">Rimjhim, roles, and acknowledgments here.</p>
 </div>
 <!-- Contact -->
 <div id="contact" class="section bg-white rounded-xl p-6 shadow-md max-w-6xl mx-auto mt-12 mb-12" style="display:none;">
