--- a/index.html
+++ b/index.html
@@ -279,11 +279,44 @@
   </div>
 </div>
 
-<!-- Team -->
-<div id="team" class="section bg-white rounded-xl p-6 shadow-md max-w-6xl mx-auto mt-12" style="display:none;">
-  <h3 class="text-2xl font-bold text-green-600">Team & Acknowledgments</h3>
-  <p class="mt-2 text-slate-700">Rimjhim, roles, and acknowledgments here.</p>
-</div>
+<!-- ✅ Team Section with Names + Emails -->
+      <div id="team" class="section bg-white rounded-xl p-6 shadow-md max-w-6xl mx-auto mt-12">
+        <h3 class="text-2xl font-bold text-green-600">Team & Acknowledgments</h3>
+        <p class="mt-2 text-slate-700">Meet the Kolatrix team members who contributed to this project:</p>
+        <ul class="mt-4 space-y-3 text-slate-700">
+          <li>👩‍💻 <strong>Rajnandini Rathore</strong> — 
+            <a href="mailto:btbtc24097_rajnandini@banasthali.in" class="font-medium text-indigo-700 underline hover:text-indigo-900">
+              btbtc24097_rajnandini@banasthali.in
+            </a>
+          </li>
+          <li>👩‍💻 <strong>Rimjhim</strong> — 
+            <a href="mailto:btbtc24175_rimjhim@banasthali.in" class="font-medium text-indigo-700 underline hover:text-indigo-900">
+              btbtc24175_rimjhim@banasthali.in
+            </a>
+          </li>
+          <li>👨‍💻 <strong>Rimmi Joshi</strong> — 
+            <a href="mailto:btbtc24129_rimmi@banasthali.in" class="font-medium text-indigo-700 underline hover:text-indigo-900">
+              btbtc24129_rimmi@banasthali.in
+            </a>
+          </li>
+          <li>👩‍💻 <strong>Anushka</strong> — 
+            <a href="mailto:btbtn24037_anushka@banasthali.in" class="font-medium text-indigo-700 underline hover:text-indigo-900">
+              btbtn24037_anushka@banasthali.in
+            </a>
+          </li>
+          <li>👨‍💻 <strong>Dipanshi Sawhney</strong> — 
+            <a href="mailto:btbtn24057_dipanshi@banasthali.in" class="font-medium text-indigo-700 underline hover:text-indigo-900">
+              btbtn24057_dipanshi@banasthali.in
+            </a>
+          </li>
+          <li>👩‍💻 <strong>Anshika Srivastava</strong> — 
+            <a href="mailto:btbtn24062_anshika@banasthali.in" class="font-medium text-indigo-700 underline hover:text-indigo-900">
+              btbtn24062_anshika@banasthali.in
+            </a>
+          </li>
+        </ul>
+        <p class="mt-6 text-slate-700">We acknowledge the contributions of all team members in design, coding, research, and documentation for making Kolatrix a success.</p>
+      </div>
 <!-- Contact -->
 <div id="contact" class="section bg-white rounded-xl p-6 shadow-md max-w-6xl mx-auto mt-12 mb-12" style="display:none;">
   <h3 class="text-2xl font-bold text-yellow-600">Contact Us</h3>
