--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <!-- ✅ Team Section with Names + Emails -->
       <div id="team" class="section bg-white rounded-xl p-6 shadow-md max-w-6xl mx-auto mt-12">
         <h3 class="text-2xl font-bold text-green-600">Team & Acknowledgments</h3>
-        <p class="mt-2 text-slate-700">Meet the Kolatrix team members who contributed to this project:</p>
+        <p class="mt-2 text-slate-700">Meet the Kolatrix team members who contributed to this project:-</p>
         <ul class="mt-4 space-y-3 text-slate-700">
           <li>👩‍💻 <strong>Rajnandini Rathore</strong> — 
             <a href="mailto:btbtc24097_rajnandini@banasthali.in" class="font-medium text-indigo-700 underline hover:text-indigo-900">
